--- a/index.html
+++ b/index.html
@@ -3,62 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kuru Temizleme Hizmetleri</title>
+    <title>Kerem'in Kuru Temizleme Hizmetleri</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #ffffff;
             color: #333;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #000;
             color: white;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #333;
+            background-color: #fff;
+            border-bottom: 1px solid #eaeaea;
         }
         nav a {
-            color: white;
-            padding: 14px 20px;
+            color: #000;
+            padding: 15px 20px;
             text-decoration: none;
             text-align: center;
+            transition: color 0.3s ease;
         }
         nav a:hover {
-            background-color: #ddd;
-            color: black;
+            color: #4CAF50;
         }
         .container {
-            padding: 20px;
+            padding: 40px 20px;
+            max-width: 1200px;
+            margin: auto;
         }
         .services, .contact, .about {
-            margin: 20px 0;
+            margin: 40px 0;
         }
         .services h2, .contact h2, .about h2 {
             color: #4CAF50;
+            border-bottom: 2px solid #4CAF50;
+            display: inline-block;
+            margin-bottom: 20px;
         }
         .services p, .contact p, .about p {
-            line-height: 1.6;
+            line-height: 1.8;
         }
         footer {
             text-align: center;
-            padding: 10px 0;
-            background-color: #333;
+            padding: 20px 0;
+            background-color: #000;
             color: white;
-            position: fixed;
-            bottom: 0;
+        }
+        .service-image {
             width: 100%;
+            max-width: 300px;
+            margin: 20px auto;
+            display: block;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Kuru Temizleme Hizmetleri</h1>
+        <h1>Kerem'in Kuru Temizleme Hizmetleri</h1>
     </header>
     <nav>
         <a href="#about">Hakkımızda</a>
@@ -69,22 +78,27 @@
         <section id="about" class="about">
             <h2>Hakkımızda</h2>
             <p>Kaliteli kuru temizleme hizmetleri sunan firmamız, müşteri memnuniyetini ön planda tutarak en iyi hizmeti vermeyi amaçlamaktadır. Profesyonel ekibimiz ve modern ekipmanlarımızla her türlü giysi ve tekstil ürününüzü özenle temizliyoruz.</p>
+            <img src="https://via.placeholder.com/300x200" alt="Hakkımızda" class="service-image">
         </section>
         <section id="services" class="services">
             <h2>Hizmetlerimiz</h2>
             <p>Giysi Temizleme: Günlük giysilerinizden özel gün elbiselerinize kadar her türlü giysiyi temizliyoruz.</p>
+            <img src="https://via.placeholder.com/300x200" alt="Giysi Temizleme" class="service-image">
             <p>Yorgan ve Battaniye Temizleme: Büyük ve hacimli tekstil ürünlerinizi de özenle temizliyoruz.</p>
+            <img src="https://via.placeholder.com/300x200" alt="Yorgan ve Battaniye Temizleme" class="service-image">
             <p>Perde ve Halı Temizleme: Ev ve ofislerinizin perdeleri ve halıları için profesyonel temizleme hizmeti sunuyoruz.</p>
+            <img src="https://via.placeholder.com/300x200" alt="Perde ve Halı Temizleme" class="service-image">
         </section>
         <section id="contact" class="contact">
             <h2>İletişim</h2>
             <p>Adres: Örnek Mahallesi, Örnek Sokak, No: 123, İstanbul</p>
             <p>Telefon: (0212) 123 45 67</p>
-            <p>E-posta: info@kurutemizleme.com</p>  
+            <p>E-posta: info@kurutemizleme.com</p>
+            <img src="https://via.placeholder.com/300x200" alt="İletişim" class="service-image">
         </section>
     </div>
     <footer>
-        <p>&copy; 2024 Kuru Temizleme Hizmetleri. Tüm hakları saklıdır.</p>
+        <p>&copy; 2024 Kerem'in Kuru Temizleme Hizmetleri. Tüm hakları saklıdır.</p>
     </footer>
 </body>
 </html>
