--- a/index.html
+++ b/index.html
@@ -13,19 +13,24 @@
             color: #333;
         }
         header {
-            background-color: #000;
+            background: url('https://via.placeholder.com/1200x400') no-repeat center center;
+            background-size: cover;
             color: white;
-            padding: 20px 0;
+            padding: 60px 0;
             text-align: center;
+        }
+        header h1 {
+            background-color: rgba(0, 0, 0, 0.5);
+            display: inline-block;
+            padding: 20px;
         }
         nav {
             display: flex;
             justify-content: center;
-            background-color: #fff;
-            border-bottom: 1px solid #eaeaea;
+            background-color: #000;
         }
         nav a {
-            color: #000;
+            color: white;
             padding: 15px 20px;
             text-decoration: none;
             text-align: center;
@@ -51,17 +56,17 @@
         .services p, .contact p, .about p {
             line-height: 1.8;
         }
-        footer {
-            text-align: center;
-            padding: 20px 0;
-            background-color: #000;
-            color: white;
-        }
         .service-image {
             width: 100%;
             max-width: 300px;
             margin: 20px auto;
             display: block;
+        }
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #000;
+            color: white;
         }
     </style>
 </head>
